--- a/generate_random_walk.ipynb
+++ b/generate_random_walk.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -45,18 +45,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jsons/clutter/JPN \t[ 0.0090231   0.015956    0.19622364  0.22991623  0.54888102]\n",
-      "jsons/clutter/WRD \t[ 0.00564449  0.0115223   0.20894616  0.25247929  0.52140776]\n",
-      "jsons/gochagocha/JPN \t[ 0.01105343  0.01282227  0.24220134  0.30147198  0.43245098]\n",
-      "jsons/gochagocha/WRD \t[ 0.0042756   0.00923921  0.17685046  0.26003561  0.54959913]\n",
-      "jsons/kirakira/JPN \t[ 0.00431125  0.00682611  0.1643413   0.29225799  0.53226335]\n",
-      "jsons/kirakira/WRD \t[ 0.00724201  0.01040253  0.18952026  0.28195107  0.51088413]\n",
-      "jsons/murmur/JPN \t[ 0.00614216  0.01296055  0.18426367  0.22417467  0.57245895]\n",
-      "jsons/murmur/WRD \t[ 0.00561452  0.0082686   0.19306318  0.26585678  0.52719691]\n",
-      "jsons/sarasara/JPN \t[ 0.01056206  0.01998984  0.209599    0.19552781  0.56432128]\n",
-      "jsons/sarasara/WRD \t[ 0.01030783  0.01589554  0.20013731  0.23737115  0.53628817]\n",
-      "jsons/twinkle/JPN \t[ 0.01162855  0.02258117  0.22542008  0.19402886  0.54634134]\n",
-      "jsons/twinkle/WRD \t[ 0.01064507  0.01463117  0.19079947  0.23005694  0.55386736]\n"
+      "jsons/clutter/JPN \t[  4.24942611e-01   4.81671302e-02   1.47076185e-02   7.30218945e-03\n",
+      "   3.24922395e-03   2.22611217e-03   9.72160527e-04   2.49084474e-04\n",
+      "   5.47659072e-04   4.64563009e-01   6.36381245e-02   1.37514655e-02\n",
+      "   7.39218124e-03   5.64463882e-03   3.10603938e-03   2.20012073e-03\n",
+      "   1.18025662e-03   7.36676336e-04]\n",
+      "jsons/clutter/WRD \t[  4.20551174e-01   4.54176527e-02   8.16862810e-03   3.22790661e-03\n",
+      "   2.00016428e-03   2.05458639e-03   1.03592199e-03   5.47024962e-04\n",
+      "   2.66085895e-04   4.98507622e-01   6.58874983e-02   8.74700154e-03\n",
+      "   3.94466648e-03   4.46006316e-03   2.72679839e-03   1.33838888e-03\n",
+      "   1.03319384e-03   4.82477167e-04]\n",
+      "jsons/gochagocha/JPN \t[ 0.48080284  0.04337108  0.01009146  0.00567303  0.00380735  0.00283242\n",
+      "  0.00228008  0.00140847  0.00106967  0.44270391  0.04899856  0.01273228\n",
+      "  0.00720687  0.00527838  0.00443667  0.0039139   0.00312414  0.00276968]\n"
      ]
     }
    ],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -87,18 +88,18 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x10ac37390>"
+       "<matplotlib.collections.PathCollection at 0x110dbe4d0>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAEACAYAAAC6d6FnAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEB1JREFUeJzt3W+MXFd9xvHvUztBNqmoEIiI4CpQBRVelJaCSYGKbZus\nTVUliowUUlpZokos1NBWdVsTqVWM1DeRsOBFBAohRUalTaUkpkYCJkFigVAosTAEiI3iBquxoSIQ\nmkLjSnHz64sZO8t2PbM7M7szO+f7kVaa++fMnl/Guc/cc+69m6pCktSen5t0ByRJk2EASFKjDABJ\napQBIEmNMgAkqVEGgCQ1amAAJNmZ5HiSR5Psu8A+c0mOJvlWkoXVtJUkTUb63QeQZBPwHeAq4DTw\nEHBDVR1btM8vAF8CdlTVqSQvqqofrqStJGlyBp0BbAdOVNXJqnoGuBu4dsk+vw/cW1WnAKrqh6to\nK0makEEBcBnw+KLlU711i10BvDDJ55IcSfKHq2grSZqQzQO2r+Q5ERcBrwV+B9gKfDnJV1bYVpI0\nIYMC4DSwbdHyNrrf5Bd7HPhhVZ0BziT5AvCa3n6D2pLEoJCkIVRVRmk/aAjoCHBFksuTXAxcDxxe\nss8/A29OsinJVuANwCMrbHuuiJn9ufXWWyfeB+uzvtZqa6G+ceh7BlBVZ5PcDHSATcBdVXUsyZ7e\n9juq6niSzwAPA88Cd1bVIwDLtR1LryVJIxs0BERVfRr49JJ1dyxZfh/wvpW0lSRNB+8EXmNzc3OT\n7sKasr6Na5Zrg9mvbxz63gi2Lh1IatJ9kKSNJgm1xpPAkqQZZQBIUqMMAElqlAEgSY0yACSpUQaA\nJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmNMgAkqVEGgCQ1ygCQpEYZAJLUKANAkhplAEhS\nowwASWqUASBJjTIAJKlRBoDWRafTYX5+F/Pzu+h0OpPujiQgVTXZDiQ16T5obXU6Ha67bjdnztwG\nwJYt+zh06CA7duyYcM+kjSsJVZWR3mPSB18DYPbNz+/igQeuAXb31hzk6qsPc//9906yW9KGNo4A\ncAhIkhq1edId0Ozbu/cmHnxwN2fOdJe3bNnH3r0HJ9spSQ4BaX10Oh0OHPgw0A0Ex/+l0TgHIEmN\ncg5AkjQ0A0CSGmUASBPkDXKaJOcApAnxBjmNwklgaQPzBjmNwklgSdLQvBFMmhBvkNOkOQQkTZA3\nyGlYzgFIUqOcA5AkDc0AkKRGGQCS1CgDQJIaZQBIUqMMAG0oPjtHGh8vA9WG4bNzpOd4H4Ca4rNz\npOesy30ASXYmOZ7k0ST7ltk+l+SpJEd7P3+zaNvJJA/31n91lI5Kksar77OAkmwCbgeuAk4DDyU5\nXFXHluz6+aq6Zpm3KGCuqp4cS2/VNJ+dI43XoDOA7cCJqjpZVc8AdwPXLrNfv9OQkU5RtP6mdaJ1\nx44dHDrUHfa5+urDjv9LI+o7B5DkbcCOqrqxt/wHwBuq6t2L9nkLcB9wiu5Zwl9U1SO9bY8BTwH/\nC9xRVXcu8zucA5giszzR6oPXNEvGMQcw6HHQKzkyfw3YVlVPJ3kr8Anglb1tb6qq7yd5MfBAkuNV\n9cWlb7B///7zr+fm5pibm1tJ37UGDhz4cO/g351oPXOmu26jHyyXBtuDD+6emWBTGxYWFlhYWBjr\new4KgNPAtkXL2+h+0z+vqn6y6PWnk3wwyQur6smq+n5v/RNJDtEdUuobANJamNVgmwTPpCZj6Zfj\n9773vSO/56AAOAJckeRy4HvA9cANi3dI8hLgB1VVSbbTHVZ6MslWYFNV/STJ84F5YPQea0050ap+\nPJOaLX0DoKrOJrkZ6ACbgLuq6liSPb3tdwBvA96V5CzwNPD2XvNLgfuSnPs9H6+q+9emDI3LuYnW\n577hzcb/3AbbeHgmNVu8EUzNcOhidN6MNz28E1jSuprlq8Q2GgNA0rrzTGo6GACS1Cj/JrAkaWgG\ngCQ1ygCQpEYZAJLUKANAkhplAEjLmNZHYkvj5GWg0hLe7KSNwPsApDXg4w60EXgfgCRpaAbAlHDM\neXrs3XsTW7bsAw4CB3tPDr1p0t2Sxs4hoCngmPP08Xk3mnbOAcwIx5wlrZZzAJKkoQ36k5BaB/61\nKkmT4BDQlHDMWdJqOAcg9Rigao0BIOFVVGqTASDhVVRqk1cBSZKG5lVA2vC8ikoajkNAmglOAqs1\nzgFIG5ihpVEYANIG5ZVLGpUBIG1QXrmkUXkVkCRpaF4FJE2AVy5pGjgEJE2Ik8AahXMAktQo5wAk\nSUMzACSpUQaAJDXKAJCkRhkAktQoA0BTrdPpMD+/i/n5XXQ6nUl3R5opXgaqqeXzcqQL8z4AzTSf\nlyNdmPcBSJKG5rOANLV8Xo60thwC0lTzeTnS8pwDkKRGOQcgSRqaASBJjTIAJKlRBoAkNWpgACTZ\nmeR4kkeT7Ftm+1ySp5Ic7f389UrbSpImp+99AEk2AbcDVwGngYeSHK6qY0t2/XxVXTNkW0nSBAw6\nA9gOnKiqk1X1DHA3cO0y+y13KdJK20qSJmBQAFwGPL5o+VRv3WIFvDHJN5J8KsmrV9FWkjQhgx4F\nsZI7tL4GbKuqp5O8FfgE8MrVdGL//v3nX8/NzTE3N7ea5pI08xYWFlhYWBjre/a9EzjJlcD+qtrZ\nW74FeLaqbuvT5rvAr9MNgYFtvRNYklZvPe4EPgJckeTyJBcD1wOHl3TiJUnSe72dbqg8uZK2kqTJ\n6TsEVFVnk9wMdIBNwF1VdSzJnt72O4C3Ae9KchZ4Gnh7v7ZrV4okaTV8GJwkbUA+DE6SNDQDQJIa\nZQBIUqMMAElqlAEgSY0yACSpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmNMgAkqVEG\ngCQ1ygCQpEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRBoAkNcoAkKRGGQCS1CgDQJIaZQBI\nUqMMAElqlAEgSY0yACSpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmNMgAkqVEGgCQ1\nygCQpEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRBoAkNWpgACTZmeR4kkeT7Ouz3+uTnE2y\na9G6k0keTnI0yVfH1WlJ0ug299uYZBNwO3AVcBp4KMnhqjq2zH63AZ9Z8hYFzFXVk+PrsiRpHAad\nAWwHTlTVyap6BrgbuHaZ/d4N3AM8scy2jNZFSdJaGBQAlwGPL1o+1Vt3XpLL6IbCh3qratHmAj6b\n5EiSG0fsqyRpjPoOAfGzB/ML+QDwnqqqJOFnv/G/qaq+n+TFwANJjlfVF5e+wf79+8+/npubY25u\nbgW/VpLasbCwwMLCwljfM1UXPsYnuRLYX1U7e8u3AM9W1W2L9nmM5w76LwKeBm6sqsNL3utW4KdV\ndWDJ+urXB0nS/5eEqhppiH3QENAR4Ioklye5GLge+JkDe1W9oqpeXlUvpzsP8K6qOpxka5Kf73X0\n+cA88M1ROitJGp++Q0BVdTbJzUAH2ATcVVXHkuzpbb+jT/NLgfu6o0JsBj5eVfePp9uSpFH1HQJa\nlw44BCRJq7YeQ0CSpBllAEhSowwASWqUASBJjTIAJKlRBoAkNcoAkKRGGQCS1CgDQJIaZQBIUqMM\nAElqlAEgSY0yACQ1odPpMD+/i/n5XXQ6nUl3Zyr4NFBJM6/T6XDddbs5c6b7t6y2bNnHoUMH2bFj\nx4R7NrxxPA3UAJA08+bnd/HAA9cAu3trDnL11Ye5//57J9mtkfg4aEnS0Ab9UXhJ2vD27r2JBx/c\nzZkz3eUtW/axd+/ByXZqCjgEJKkJnU6HAwc+DHQDYSOP/4NzAJLULOcAJElDMwAkqVEGgCQ1ygCQ\npEYZAJLUKANAkhplAEhSowwASWqUASBJjTIAJKlRBoAkNcoAkKRGGQCS1CgDQJIaZQBIUqMMAElq\nlAEgSY0yACSpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmNMgAkqVEGgCQ1amAAJNmZ\n5HiSR5Ps67Pf65OcTbJrtW0lSeuvbwAk2QTcDuwEXg3ckORVF9jvNuAzq2076xYWFibdhTVlfRvX\nLNcGs1/fOAw6A9gOnKiqk1X1DHA3cO0y+70buAd4Yoi2M23W/xFa38Y1y7XB7Nc3DoMC4DLg8UXL\np3rrzktyGd0D+4d6q2qlbSVJkzMoAGrAdoAPAO+pqgLS+1lpW0nShKR73L7AxuRKYH9V7ewt3wI8\nW1W3LdrnMZ476L8IeBq4EfjBoLa99QaFJA2hqjJ4rwvbPGD7EeCKJJcD3wOuB25Y0oFXnHud5KPA\nJ6vqcJLNg9r22o9UgCRpOH0DoKrOJrkZ6ACbgLuq6liSPb3td6y27fi6LkkaRd8hIEnS7FrTO4EH\n3QiW5JeTfDnJ/yTZu8z2TUmOJvnkWvZzGKPUluQXktyT5FiSR3pzLVNlxPpuSfLtJN9M8g9Jnrd+\nPV+ZFdT3jiTfSPJwki8l+ZWVtp0Gw9aXZFuSz/U+v28l+ZP17/1go3x+ve0b+djS79/m6o4tVbUm\nP3SHfU4AlwMXAV8HXrVknxcDrwP+Fti7zHv8OfBx4PBa9XMStQEHgXf2Xm8GXjDpmsZVX6/NY8Dz\nesv/BOyedE1D1Pcb5z4XujczfmWlbSf9M2J9lwK/2nt9CfCdWapv0faNfGy5YG2rPbas5RnAwBvB\nquqJqjoCPLO0cZKXAb8LfITnrjKaFkPXluQFwG9W1d/19jtbVU+tU79XapTP7r9667b2LgTYCpxe\nhz6vxkrq+/Kiz+VfgZettO0UGLq+qvqPqvp67/VPgWPAS9et5yszyuc3C8eWZWsb5tiylgEw6o1g\n7wf+Enh2nJ0ak1FqeznwRJKPJvlakjuTbB17D0czdH1V9SRwAPh3uld//WdVfXbsPRzNauv7I+BT\nQ7adhFHqO693Bd+v0T3ITJNR65ulY8vi2lZ9bFnLABh6djnJ7wE/qKqjTF9Cw2g3uW0GXgt8sKpe\nC/w38J6x9Gp8Rvnsfgn4M7qnsC8FLknyjjH1a1xWXF+S3wLeCZwbi90IV02MUt+59ZfQfbzLn/bO\nBKbJ0PXN0rFlmc9u1ceWtQyA08C2Rcvb6KbZSrwRuCbJd4F/BH47ycfG3L9RjFLbKeBUVT3UW76H\n7oc2TUap73XAv1TVj6rqLHAf3c9zmqyovt7k2p3ANVX149W0nbBR6iPJRcC9wN9X1SfWuK/DGKW+\nmTi2XKC21R9b1nAyYzPwb3S/CV5Mn8kyYD/LTAL3tr2F7s1lE5+gGVdtwBeAVy7aftukaxpXfcBr\ngG8BW+h+wzoI/PGka1ptfcAv0p2Mu3LY/zYbtL4AHwPeP+k61qK+JftsyGNLv9pWe2xZ62LeSvcq\nghPALb11e4A9vdeX0h3vegr4Md1x40uW+ZCmaqZ+1Np6B8mHgG/Q/YY8VVcBjaG+vwK+DXyTbgBc\nNOl6hqjvI8CPgKO9n6/2azttP8PWB7yZ7tj41xdt2znpesb5+S16j416bOn3b3NVxxZvBJOkRvkn\nISWpUQaAJDXKAJCkRhkAktQoA0CSGmUASFKjDABJapQBIEmN+j+bT+jicj0OzgAAAABJRU5ErkJg\ngg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZQAAAEACAYAAACUMoD1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEPJJREFUeJzt3X3InfV9x/H3J3WCUMjshrH4VHyYOmFEoTawwm4QTbRj\nse0opn/4sD8aaMPGJiwRyhL2lynUtSK21boSx0pWNlrTzfWOovdARq3gnH1IYmRrmqQmLUz/qJPN\n2e/+uK/o6fHcT7l+J/dJ7vcLLjjXdb6/c37nxy/3J9fTOakqJEnqa9Vyd0CSdGYwUCRJTRgokqQm\nDBRJUhMGiiSpCQNFktREk0BJsiHJ/iQvJdk6R839SQ4meSHJtQPbH0lyPMmLQ/XbkxxJ8ny3bGjR\nV0nSePQOlCSrgAeA9cA1wKYkVw3V3AxcVlVXAJuBLw08/bWu7Sj3VdV13fKdvn2VJI1Piz2U64GD\nVXWoqt4EdgMbh2o2Ao8CVNWzwOoka7r1Z4BX53jtNOifJOkUaBEoFwCHB9aPdNvmqzk6omaULd0h\nsq8mWd2vm5KkcZrkk/IPApdW1VrgGHDfMvdHkjSPsxq8xlHg4oH1C7ttwzUXLVDzK6rq5wOrDwPf\nHlWXxC8jk6STUFVNTyu02EN5Drg8ySVJzgZuA/YM1ewBbgdIsg54raqODzwfhs6XJDl/YPVjwA/m\n6kBVuVSxffv2Ze/DpCyOhWPhWMy/jEPvPZSqeivJFmAvswH1SFXtS7J59ul6qKoeT3JLkpeB14G7\nTrRP8nVgCviNJD8BtlfV14DPJVkL/BL4MbNXh0mSJlSLQ17U7CW9Vw5t+8rQ+pY52n5yju23t+ib\nJOnUmOST8lqiqamp5e7CxHAs3uFYvMOxGK+M61jaqZKkTvfPIEmnWhJqAk/KS5JkoEiS2jBQJElN\nGCiSpCYMFElSEwaKJKkJA0WS1ISBIklqwkCRJDVhoEiSmjBQJElNGCiSpCYMFElSEwaKJKkJA0WS\n1ISBIklqwkCRJDVhoEiSmjBQJElNGCiSpCYMFElSEwaKJKkJA0WS1ISBIklqwkCRJDVhoEiSmjBQ\nJElNGCiSpCYMFElSEwaKJKkJA0WS1ISBIklqwkCRJDVhoEiSmmgSKEk2JNmf5KUkW+eouT/JwSQv\nJLl2YPsjSY4neXGo/twke5McSDKdZHWLvkqSxqN3oCRZBTwArAeuATYluWqo5mbgsqq6AtgMfGng\n6a91bYdtA56sqiuBp4B7+vZVkjQ+LfZQrgcOVtWhqnoT2A1sHKrZCDwKUFXPAquTrOnWnwFeHfG6\nG4Fd3eNdwK0N+ipJGpMWgXIBcHhg/Ui3bb6aoyNqhp1XVccBquoYcF7PfkqSxuis5e7AEtRcT+zY\nsePtx1NTU0xNTZ2C7kjS6WNmZoaZmZmxvkeq5vw7vbgXSNYBO6pqQ7e+Daiq2jlQ82Xg6ar6u259\nP/B7J/ZAklwCfLuqfmegzT5gqqqOJzm/a3/1iPevvp9BklaaJFRVWr5mi0NezwGXJ7kkydnAbcCe\noZo9wO3wdgC9diJMOumW4TZ3do/vAB5r0FdJ0pj0DpSqegvYAuwFfgjsrqp9STYn+VRX8zjwn0le\nBr4CfPpE+yRfB/4V+K0kP0lyV/fUTuDGJAeAG4B7+/ZVkjQ+vQ95LTcPeUnS0k3qIS9JkgwUSVIb\nBookqQkDRZLUhIEiSWrCQJEkNWGgSJKaMFAkSU0YKJKkJgwUSVITBookqQkDRZLUhIEiSWrCQJEk\nNWGgSJKaMFAkSU0YKJKkJgwUSVITBookqQkDRZLUhIEiSWrCQJEkNWGgSJKaMFAkSU0YKJKkJgwU\nSVITBookqQkDRZLUhIEiSWrCQJEkNWGgSJKaMFAkSU0YKJKkJgwUSVITBookqYkmgZJkQ5L9SV5K\nsnWOmvuTHEzyQpK1C7VNsj3JkSTPd8uGFn2VJI3HWX1fIMkq4AHgBuCnwHNJHquq/QM1NwOXVdUV\nST4EfBlYt4i291XVfX37KEkavxZ7KNcDB6vqUFW9CewGNg7VbAQeBaiqZ4HVSdYsom0a9E+SdAq0\nCJQLgMMD60e6bYupWajtlu4Q2VeTrG7QV0nSmCzXSfnF7Hk8CFxaVWuBY4CHviRpgvU+hwIcBS4e\nWL+w2zZcc9GImrPnaltVPx/Y/jDw7bk6sGPHjrcfT01NMTU1tdi+S9KKMDMzw8zMzFjfI1XV7wWS\n9wAHmD2x/grwPWBTVe0bqLkF+ExVfSTJOuALVbVuvrZJzq+qY137PwU+WFWfHPH+1fczSNJKk4Sq\nanqeuvceSlW9lWQLsJfZQ2iPdIGwefbpeqiqHk9yS5KXgdeBu+Zr273057rLi38J/BjY3LevkqTx\n6b2HstzcQ5GkpRvHHop3ykuSmjBQJElNGCiSpCYMFElSEwaKzjjT09PcdNPHuemmjzM9Pb3c3ZFW\nDK/y0hllenqaj370Dt54YycA55yzlW9+cxfr169f5p5Jk2UcV3kZKDqj3HTTx3niiT8A7ui27OLG\nG/ewd+8/LGe3pInjZcOSpInV4ru8pIlx992f4pln7uCNN2bXzzlnK3ffvWt5OyWtEB7y0hlnenqa\nz3/+IWA2YFbK+ZOV+rl1cjyHMoKBInkxgpbOQBnBQJG8GEFL50l5SdLE8qS8dAbwYgRNAg95SWcI\nT8prKTyHMoKBIklL5zkUSdLEMlAkSU0YKJKkJgwUSVITBopOKX+rRDpzeZWXThm/HkSaHF42PIKB\ncvrw60GkyeFlw5KkieVXr+iU8etBpDObh7x0Svn1INJk8BzKCAaKJC2d51AkSRPLQJEkNWGgSJKa\nMFAkSU0YKJKkJgwUSVITBookqQkDRZLUhIEiSWqiSaAk2ZBkf5KXkmydo+b+JAeTvJBk7UJtk5yb\nZG+SA0mmk6xu0VdJ0nj0DpQkq4AHgPXANcCmJFcN1dwMXFZVVwCbgS8vou024MmquhJ4Crinb18l\nSePTYg/leuBgVR2qqjeB3cDGoZqNwKMAVfUssDrJmgXabgROfBXtLuDWBn2VJI1Ji0C5ADg8sH6k\n27aYmvnarqmq4wBVdQw4r0FfJUljslwn5U/mGy79SmFJmmAtfmDrKHDxwPqF3bbhmotG1Jw9T9tj\nSdZU1fEk5wM/m6sDO3bsePvx1NQUU1NTS/sEknSGm5mZYWZmZqzv0fv3UJK8BzgA3AC8AnwP2FRV\n+wZqbgE+U1UfSbIO+EJVrZuvbZKdwH9V1c7u6q9zq2rbiPf391AkaYnG8XsovfdQquqtJFuAvcwe\nQnukC4TNs0/XQ1X1eJJbkrwMvA7cNV/b7qV3At9I8kfAIeATffsqSRoff7FRklYgf7FRkjSxDBRJ\nUhMGiiSpCQNFktSEgSJJasJAkSQ1YaBIkpowUCRJTRgokqQmDBRJUhMGiiSpCQNFktSEgSJJasJA\nkSQ1YaBIkpowUCRJTRgokqQmDBRJUhMGiiSpCQNFktSEgSJJasJAkSQ1YaBIkpowUCRJTRgokqQm\nDBRJUhMGiiSpCQNFktSEgSJJasJAkSQ1YaBIkpowUCRJTRgokqQmDBRJUhMGiiSpCQNFktREr0BJ\ncm6SvUkOJJlOsnqOug1J9id5KcnWhdonuSTJfyd5vlse7NNPSdL49d1D2QY8WVVXAk8B9wwXJFkF\nPACsB64BNiW5ahHtX66q67rl0z37KUkas76BshHY1T3eBdw6ouZ64GBVHaqqN4HdXbuF2qdn3yRJ\np1DfQDmvqo4DVNUx4LwRNRcAhwfWj3TbANbM0/4D3eGup5N8uGc/JUljdtZCBUmeANYMbgIK+OyI\n8urZnxPtXwEurqpXk1wHfCvJb1fVL0Y12rFjx9uPp6ammJqa6tkNSTqzzMzMMDMzM9b3SNXJZ0CS\nfcBUVR1Pcj7wdFVdPVSzDthRVRu69W1AVdXOxbTv2jwN3F1Vz494rvp8BklaiZJQVU1PLfQ95LUH\nuLN7fAfw2Iia54DLuyu3zgZu69rN2T7Jb3Yn80lyKXA58B89+ypJGqO+eyjvA74BXAQcAj5RVa8l\neT/wcFX9fle3AfgiswH2SFXdu0D7jwF/Cfwv8EvgL6rq8Tn64B6KJC3ROPZQegXKJDBQJGnpJvGQ\nlyRJgIEiSWrEQJEkNWGgSJKaMFAkSU0YKJKkJgwUSVITBookqQkDRZLUhIEiSWrCQJEkNWGgSJKa\nMFAkSU0YKJKkJgwUSVITBookqQkDRZLUhIEiSWrCQJEkNWGgSJKaMFAkSU0YKJKkJgwUSVITBook\nqQkDRZLUhIEiSWrCQJEkNWGgSJKaMFAkSU0YKJKkJgwUSVITBookqQkDRZLUhIEiSWrCQJEkNdEr\nUJKcm2RvkgNJppOsnqNuQ5L9SV5KsnVg+x8m+UGSt5JcN9TmniQHk+xLclOffkqSxq/vHso24Mmq\nuhJ4CrhnuCDJKuABYD1wDbApyVXd098HPgr8y1Cbq4FPAFcDNwMPJknPvp7xZmZmlrsLE8OxeIdj\n8Q7HYrz6BspGYFf3eBdw64ia64GDVXWoqt4EdnftqKoDVXUQGA6LjcDuqvq/qvoxcLB7Hc3Dfyzv\ncCze4Vi8w7EYr76Bcl5VHQeoqmPAeSNqLgAOD6wf6bbNZ7jN0UW0kSQto7MWKkjyBLBmcBNQwGdH\nlFejfkmSTjdVddILsA9Y0z0+H9g3omYd8J2B9W3A1qGap4Hr5qoBvgN8aI4+lIuLi4vL0pc+f/9H\nLQvuoSxgD3AnsBO4A3hsRM1zwOVJLgFeAW4DNo2oGzyPsgf42yR/xeyhrsuB743qQFV5sl6SJkDf\ncyg7gRuTHABuAO4FSPL+JP8IUFVvAVuAvcAPmT3Zvq+ruzXJYWb3Yv4xyT93bX4EfAP4EfA48Onq\ndkckSZMp/p2WJLUwcXfKz3UT5FDN/d1Njy8kWbtQ28XegDlpxjQW25McSfJ8t2w4FZ+lj5MYh2sH\ntj+S5HiSF4fqV8qcWMxYnHZzAk7+30eSC5M8leSHSb6f5I8H6lfKvFjMWCx9XrQ+KdPzJP8q4GXg\nEuDXgBeAq4Zqbgb+qXv8IeC7C7Vl9tDcn3ePtwL3LvdnXcax2A782XJ/vlMxDt36h4G1wItDbVbU\nnFhgLE6rOdF3LJi9gGht9/i9wIEV/LdivrFY8ryYtD2UOW+CHLAReBSgqp4FVidZs0DbxdyAOWnG\nNRbw7htJJ1mfcaCqngFeHfG6K21OzDcWcHrNCegxFlV1rKpe6Lb/gtmrVS8YaLNi5sUCYwFLnBeT\nFiiLuQlyrpr52q6phW/AnDTjGguALd1u71dPg136kxmHxdwIu5ibcifNuMYCTq85AY3GIskHmN1r\n+263acXOi4GxeHZg85LmxaQFysk4mf9ZnalXIixmLB4ELq2qtcAx4L7xdum0cabOicVYkXMiyXuB\nvwf+pKpen6NsRcyLobH4Rbd5yfNi0gLlKHDxwPqF3bbhmotG1MzX9tiJ3f4k5wM/a9jncRnLWFTV\nz6s7QAo8DHywYZ/Hoc84zOf4CpsTczoN5wT0HIskZzH7B/Rvqmrw/rkVNy/mGouTmReTFihv3wSZ\n5Gxmb4LcM1SzB7gdIMk64LVuF3W+tiduwIS5b8CcNGMZi+4fyQkfA34w3o/RW59xOCG8e+9tpc2J\nE941FqfhnID+Y/HXwI+q6osj2tzZPV4p82LkWJzUvFjuKxRGXLGwgdkrDQ4C27ptm4FPDdQ8wOxV\nDf/Or35ly7vadtvfBzzZPbcX+PXl/pzLOBaPAi8yeyXIt+i+OmeSl57j8HXgp8D/AD8B7lrBc2Ku\nsTjt5sRJjsW13bbfBd7qPu+/Ac8DG1bYvFjMWCx5XnhjoySpiUk75CVJOk0ZKJKkJgwUSVITBook\nqQkDRZLUhIEiSWrCQJEkNWGgSJKa+H/xUF8yJ9RG6wAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10a12f790>"
+       "<matplotlib.figure.Figure at 0x113f1c7d0>"
       ]
      },
      "metadata": {},
@@ -226,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
