特徴の並び順をいい感じに

--- a/eval_feat.ipynb
+++ b/eval_feat.ipynb
@@ -25,20 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import glob\n",
+    "\n",
+    "onomatpeia_list = [\n",
+    "    'clutter', 'gochagocha',\n",
+    "    'murmur', 'sarasara',\n",
+    "    'twinkle', 'kirakira',\n",
+    "]\n",
+    "\n",
     "dat = json.load(open(\"figure_features.json\"))\n",
-    "dirname = glob.glob('jsons/*/*')\n"
+    "dirname_list = []\n",
+    "\n",
+    "for onomatpeia in onomatpeia_list:\n",
+    "    dirname_pattern = 'jsons/%s/*' % onomatpeia\n",
+    "    for dirname in sorted(glob.glob(dirname_pattern)):\n",
+    "        dirname_list.append(dirname)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -47,30 +59,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jsons/clutter/JPN \t[ 0.0090231   0.015956    0.19622364  0.22991623  0.54888102]\n",
-      "jsons/clutter/WRD \t[ 0.00564449  0.0115223   0.20894616  0.25247929  0.52140776]\n",
-      "jsons/gochagocha/JPN \t[ 0.01105343  0.01282227  0.24220134  0.30147198  0.43245098]\n",
-      "jsons/gochagocha/WRD \t[ 0.0042756   0.00923921  0.17685046  0.26003561  0.54959913]\n",
-      "jsons/kirakira/JPN \t[ 0.00431125  0.00682611  0.1643413   0.29225799  0.53226335]\n",
-      "jsons/kirakira/WRD \t[ 0.00724201  0.01040253  0.18952026  0.28195107  0.51088413]\n",
-      "jsons/murmur/JPN \t[ 0.00614216  0.01296055  0.18426367  0.22417467  0.57245895]\n",
-      "jsons/murmur/WRD \t[ 0.00561452  0.0082686   0.19306318  0.26585678  0.52719691]\n",
-      "jsons/sarasara/JPN \t[ 0.01056206  0.01998984  0.209599    0.19552781  0.56432128]\n",
-      "jsons/sarasara/WRD \t[ 0.01030783  0.01589554  0.20013731  0.23737115  0.53628817]\n",
-      "jsons/twinkle/JPN \t[ 0.01162855  0.02258117  0.22542008  0.19402886  0.54634134]\n",
-      "jsons/twinkle/WRD \t[ 0.01064507  0.01463117  0.19079947  0.23005694  0.55386736]\n"
+      "jsons/clutter/JPN \t[ 0.36993459  0.04494595  0.01214311  0.00802554  0.00372029  0.00284782\n",
+      "  0.00112835  0.00094764  0.00104417  0.46486548  0.05358952  0.01300888\n",
+      "  0.00660356  0.00719529  0.00385711  0.00363533  0.00140909  0.00083989]\n",
+      "jsons/clutter/WRD \t[  3.85585548e-01   4.75371298e-02   1.03544297e-02   4.23022668e-03\n",
+      "   1.69542264e-03   1.92109093e-03   1.13620479e-03   4.18839022e-04\n",
+      "   6.81721004e-04   4.54935361e-01   6.02121161e-02   1.15217413e-02\n",
+      "   7.28805783e-03   4.04810599e-03   3.62032424e-03   2.43909420e-03\n",
+      "   1.46705592e-03   7.63328790e-04]\n",
+      "jsons/gochagocha/JPN \t[ 0.31519134  0.07322604  0.0292087   0.01246879  0.0058406   0.00378865\n",
+      "  0.00156889  0.00107925  0.00057434  0.40928321  0.0914223   0.02941768\n",
+      "  0.01273741  0.00639393  0.00435106  0.00207894  0.00078524  0.0004444 ]\n",
+      "jsons/gochagocha/WRD \t[  3.59979041e-01   3.62479660e-02   9.14820560e-03   4.51232923e-03\n",
+      "   2.25783827e-03   1.41483240e-03   7.17036751e-04   3.06951785e-04\n",
+      "   1.42612286e-04   5.09544149e-01   5.56941564e-02   7.02609676e-03\n",
+      "   3.37454181e-03   4.84328847e-03   1.86918435e-03   1.21915058e-03\n",
+      "   1.20342381e-03   3.65649002e-04]\n",
+      "jsons/murmur/JPN \t[  3.14627619e-01   4.08784851e-02   1.07092079e-02   5.45304992e-03\n",
+      "   2.18097757e-03   1.35957537e-03   8.27575521e-04   2.51460844e-04\n",
+      "   8.87232721e-05   5.37554690e-01   7.08753577e-02   6.50058736e-03\n",
+      "   1.67688543e-03   5.10298967e-03   9.58150641e-04   4.11040795e-04\n",
+      "   2.53303121e-04   2.55739170e-04]\n",
+      "jsons/murmur/WRD \t[  3.25755677e-01   4.66383169e-02   1.06528509e-02   4.11261317e-03\n",
+      "   2.77403456e-03   2.70309789e-03   1.45389325e-03   6.31675324e-04\n",
+      "   2.79723305e-04   5.05363516e-01   7.29964045e-02   9.33947780e-03\n",
+      "   6.69702962e-03   4.48949375e-03   3.64038840e-03   1.28567373e-03\n",
+      "   1.11159619e-03   3.72689326e-05]\n",
+      "jsons/sarasara/JPN \t[ 0.40528095  0.03998137  0.00457832  0.0013569   0.001384    0.00203279\n",
+      "  0.00134149  0.00087234  0.00069364  0.46661832  0.05042195  0.00827036\n",
+      "  0.00344099  0.0046244   0.00281122  0.00220615  0.0021435   0.00168005]\n",
+      "jsons/sarasara/WRD \t[  3.53451068e-01   4.78342899e-02   7.32713182e-03   3.25657523e-03\n",
+      "   2.16951698e-03   1.74318354e-03   8.34776141e-04   8.79044782e-04\n",
+      "   2.21311809e-04   4.95522155e-01   6.41214890e-02   9.56497997e-03\n",
+      "   4.37513436e-03   4.15124367e-03   2.47425745e-03   1.22641677e-03\n",
+      "   3.91217964e-04   3.67993342e-04]\n",
+      "jsons/twinkle/JPN \t[ 0.40721815  0.04986183  0.01098452  0.0051804   0.00311878  0.00313032\n",
+      "  0.00184125  0.00176756  0.00072598  0.43246478  0.0470289   0.009445\n",
+      "  0.00569813  0.00487413  0.0048929   0.00409339  0.00461742  0.00221874]\n",
+      "jsons/twinkle/WRD \t[ 0.36237767  0.04515092  0.01302542  0.00628496  0.0036174   0.00373525\n",
+      "  0.00262033  0.00059623  0.00055873  0.4675612   0.0557799   0.01389072\n",
+      "  0.00764884  0.00611017  0.00501705  0.00241458  0.00235801  0.00098402]\n",
+      "jsons/kirakira/JPN \t[ 0.42237392  0.04270507  0.01155806  0.00711488  0.00316612  0.00284776\n",
+      "  0.00227466  0.00185743  0.00152621  0.42025087  0.04198698  0.01104016\n",
+      "  0.00698882  0.00579473  0.00520149  0.00492773  0.00410836  0.00352579]\n",
+      "jsons/kirakira/WRD \t[  3.79518320e-01   3.81510609e-02   8.41655580e-03   3.50151843e-03\n",
+      "   4.11744874e-03   3.21244869e-03   2.36272301e-03   1.34042226e-03\n",
+      "   4.25502326e-04   4.72711112e-01   5.07421990e-02   1.30608604e-02\n",
+      "   6.95546857e-03   4.74129309e-03   4.43733004e-03   2.76827196e-03\n",
+      "   2.05053172e-03   1.30909102e-03]\n"
      ]
     }
    ],
    "source": [
-    "for shape, d in zip(dat, dirname):\n",
+    "for shape, d in zip(dat, dirname_list):\n",
     "    shape = np.array(shape)\n",
     "    print d, \"\\t\", shape.mean(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -78,6 +126,44 @@
    "source": [
     "feat = np.array([np.array(d).mean(0) for d in dat])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "        0.        ,  0.00588235,  0.04117647,  0.37058824,  0.48235294,\n",
+       "        0.06470588,  0.01764706,  0.        ,  0.00588235,  0.00588235,\n",
+       "        0.        ,  0.00588235,  0.        ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_file = 'jsons/clutter/JPN/clutter_JPN_adachi-e.json'\n",
+    "dat = json.load(open(json_file))['angle']\n",
+    "dat = np.array(dat)\n",
+    "hist, _ = np.histogram(dat, bins=18, range=(-np.pi, np.pi))\n",
+    "(hist / float(hist.sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
