楕円度の反映

--- a/try_pca.ipynb
+++ b/try_pca.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -243,9 +243,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clutter-gochagocha 1.62229029295 0.0228861394664\n",
-      "murmur-sarasara 2.04775438778 -0.155873470571\n",
-      "twinkle-kirakira 1.50665599111 -0.189936642615\n"
+      "clutter-gochagocha 1.62229029295 1.31127920077\n",
+      "murmur-sarasara 2.04775438778 -8.93089200179\n",
+      "twinkle-kirakira 1.50665599111 -10.8825679967\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
     "        d = np.arctan2(d[1], d[0])\n",
     "        aspect.append(a)\n",
     "        direction.append(d)\n",
-    "    print genshou, np.mean(aspect),  np.mean(direction) # * 180 / np.pi"
+    "    print genshou, np.mean(aspect),  np.mean(direction) * 180 / np.pi"
    ]
   },
   {
